2005.12.31
----------
- small regression fix for opening databases created with a version different 
from the version of Bauble you're using

2005.12.30
----------
- you can now do 'OR'ed searches with by separting values with a comma, 
e.g 2004.0001,2004.0002 would give you both accessions with those acc_id's

2005.12.28
----------
- fixed datetime issues with the CollectionEditor
- change TreeViewEditorDialog.commit_changes again to just iterate of the model
in the view and call _transform_row on each row in the model instead of 
calling _set_value_from_widgets in start()
- if everything doesn't get successfully committed in a TreeViewEditorDialog
then desensitize those rows that were committed correctly and reshow the dialog
- removed 'Preferences' from the Edit menu until we get some preferences tabs
- forgot to commit plugin\tag\tag.glade to svn
- too many fixes to name, i think we're ready for 0.4.0, just have to test on 
Windows


2005.12.26
----------
- got fed up with connections and transactions behaving differently between
postgres and sqlite so i changed everything that accesses the database to use
transactions

2005.12.23
----------
- fixed bug when creating Tag tables
- think i fixed the problem with transaction and ghost data by 
setting cacheValues=True
- a large refactoring of TableEditor, TreeViewEditor and now TableEditorDialog
- refresh search view after creating tables
- fixes a bug importing csv tables where we pass in more than one filename to
csv.start() and the file has the id's included in the rows

2005.12.22
----------
- editing SingleJoin and MultipleJoin columns now work
- creating a column in a TreeViewEditorDialog that's not a column in the table
is now much easier
- lots of fixes in speciesmeta.py
- preparing for a release soon
- too many fixes to list

2005.12.20
----------
- columns that have external editors now have a star(*) in their header
- think i need to rethink this whole multiple join editors on columns

2005.12.18